# enrich-code-prompt-mcp

./: .env.example  AGENTS.md  LICENSE  README.md  TASKS.md  pyproject.toml  pytest.ini
docker/: Dockerfile  README.md  docker-compose.integration.yml  docker-compose.yml  entrypoint.sh
mcp/: logging_config.py  main.py
tests/: README.md
tests/integration/: test_confluence_client.py
tests/unit/: test_confluence_to_md.py
