[tool.poetry]
name = "mcp"
version = "0.1.0"
description = "Multi-agent Control Plane"
authors = ["Example <example@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
structlog = "*"
python-dotenv = "*"
atlassian-python-api = "*"
markdownify = "*"
beautifulsoup4 = "*"
lxml = "*"

[tool.poetry.scripts]
mcp = "mcp.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
